[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/SuperMario256.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Jogador.gd" type="Script" id=2]
[ext_resource path="res://scripts/Teclado.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 58
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 42
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Jogador" type="Node2D"]
position = Vector2( 240, 80 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 470.576 ],
"_edit_vertical_guides_": [ 333.096, 283.668 ]
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Teclado" type="CanvasLayer" parent="CanvasLayer"]
script = ExtResource( 3 )

[node name="Button1" type="Button" parent="CanvasLayer/Teclado" groups=[
"Teclado",
]]
margin_left = 67.727
margin_top = 252.564
margin_right = 149.727
margin_bottom = 319.564
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CanvasLayer/Teclado" groups=[
"Teclado",
]]
margin_left = 200.417
margin_top = 252.782
margin_right = 282.417
margin_bottom = 319.782
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="CanvasLayer/Teclado" groups=[
"Teclado",
]]
margin_left = 332.452
margin_top = 252.0
margin_right = 414.452
margin_bottom = 319.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="CanvasLayer/Teclado" groups=[
"Teclado",
]]
margin_left = 67.5087
margin_top = 337.09
margin_right = 149.509
margin_bottom = 404.09
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="CanvasLayer/Teclado" groups=[
"Teclado",
]]
margin_left = 200.417
margin_top = 336.526
margin_right = 282.417
margin_bottom = 403.526
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="CanvasLayer/Teclado" groups=[
"Teclado",
]]
margin_left = 331.579
margin_top = 336.653
margin_right = 413.579
margin_bottom = 403.653
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="Button" parent="CanvasLayer/Teclado" groups=[
"Teclado",
]]
margin_left = 67.999
margin_top = 422.089
margin_right = 149.999
margin_bottom = 489.089
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button8" type="Button" parent="CanvasLayer/Teclado" groups=[
"Teclado",
]]
margin_left = 200.326
margin_top = 422.307
margin_right = 282.326
margin_bottom = 489.307
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button9" type="Button" parent="CanvasLayer/Teclado" groups=[
"Teclado",
]]
margin_left = 331.797
margin_top = 421.871
margin_right = 413.797
margin_bottom = 488.871
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "9"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button0" type="Button" parent="CanvasLayer/Teclado" groups=[
"Teclado",
]]
margin_left = 200.889
margin_top = 508.869
margin_right = 282.889
margin_bottom = 575.869
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMinus" type="Button" parent="CanvasLayer/Teclado" groups=[
"Teclado",
]]
margin_left = 68.4177
margin_top = 509.997
margin_right = 150.418
margin_bottom = 576.997
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDot" type="Button" parent="CanvasLayer/Teclado" groups=[
"Teclado",
]]
margin_left = 331.579
margin_top = 509.869
margin_right = 413.579
margin_bottom = 576.869
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = ","
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClear" type="Button" parent="CanvasLayer/Teclado" groups=[
"Teclado",
]]
margin_left = 128.198
margin_top = 602.985
margin_right = 210.198
margin_bottom = 669.985
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "<-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSubmit" type="Button" parent="CanvasLayer/Teclado" groups=[
"Teclado",
]]
margin_left = 267.58
margin_top = 603.793
margin_right = 349.58
margin_bottom = 670.793
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -221.5
margin_top = 71.0
margin_right = 249.5
margin_bottom = 135.0
custom_fonts/font = SubResource( 3 )
text = "29 + 29 = 0000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Placar" type="Label" parent="CanvasLayer"]
margin_left = 21.2132
margin_top = 14.1421
margin_right = 61.2132
margin_bottom = 30.1421
custom_fonts/font = SubResource( 4 )
text = "0000"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/Teclado/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="CanvasLayer/Teclado/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="CanvasLayer/Teclado/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="CanvasLayer/Teclado/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="CanvasLayer/Teclado/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="CanvasLayer/Teclado/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="CanvasLayer/Teclado/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="CanvasLayer/Teclado/Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="CanvasLayer/Teclado/Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="CanvasLayer/Teclado/Button0" to="." method="_on_Button0_pressed"]
[connection signal="pressed" from="CanvasLayer/Teclado/ButtonMinus" to="." method="_on_ButtonMinus_pressed"]
[connection signal="pressed" from="CanvasLayer/Teclado/ButtonDot" to="." method="_on_ButtonDot_pressed"]
[connection signal="pressed" from="CanvasLayer/Teclado/ButtonClear" to="." method="_on_ButtonClear_pressed"]
[connection signal="pressed" from="CanvasLayer/Teclado/ButtonSubmit" to="." method="_on_ButtonSubmit_pressed"]
